<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_currentweather">

    <fragment
        android:id="@+id/nav_currentweather"
        android:name="com.example.weatherapp.ui.currentweather.CurrentWeatherFragment"
        android:label="@string/menu_currentweather"
        tools:layout="@layout/fragment_currentweather" />

    <fragment
        android:id="@+id/nav_longtermforecast"
        android:name="com.example.weatherapp.ui.longtermforecast.LongTermForecastFragment"
        android:label="@string/menu_longtermforecast"
        tools:layout="@layout/fragment_longtermforecast" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.weatherapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>